@@ -8,8 +8,10 @@ firefox-trunk (15.0~a1~hg20120424r92149-0ubuntu1) UNRELEASED; urgency=low
     - update debian/apport/source_firefox.py.in
   * Report errors when parsing preferences and plugins in the Apport hook
     - update debian/apport/source_firefox.py.in
+  * Handle line breaks in preference files
+    - update debian/apport/source_firefox.py.in
 
- -- Chris Coulson <chris.coulson@canonical.com>  Wed, 02 May 2012 20:31:41 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 03 May 2012 01:33:41 +0100
 
 firefox-trunk (14.0~a1~hg20120424r92149-0ubuntu1) precise; urgency=low
 
